ID Updates & Fixes (#821)
* Start of 1.17.1 update

this still does not compile, however less than 1000 compile errors left (outside of compat and test packages)

* another round of update stuff

* another update pass

less than 500 compile errors left now

* another pass of updating things

less than 100 compile errors to go.

Legends blocks need json files for harvest tool specification however.

* clears yp the rest of the errors preventing running

things get to title screen, but crash on selecting single player

* disables custom dimension generation for now

the json files need to be fixed

Otherwise world gets to generated stage for now

* first pass at fixing some worldgen jsons

this hopefully fixes the secret base dimension and the pokecube_world:overworld dimension

* Update GuiDisplayPokecubeInfo.java

fixes a gui related crash

* fixes a few more crashes

temporarily disables the worldgen for legendary structures, as they require the legends dimensions to be fixed first

* more fixing

fixes a crash on npcs,
fixes a crash from recipes,
re-adds worldgen.json for legends

* a pass of gui related fixes

* more render crash fixinfgg

* yet more gui fixing

* yet more rendering work

* another pass at error removal

* move these out of here until the mods update

* last of the compile errors for now

* more fixing of rendering

* code cleanup pass

updates the capability related stuff to the new registry methods

* fixes these 2 data generators

* more java 16 related cleanup

* more general cleanup/tweaks

* Update CustomJigsawStructure.java

mapping difference from merge

* more update stuff

fixes some freezes on worldgen
fixes some combat related issues

* more java 16 related fixing

this time related to fixing abilities and move animations

* Update EventsHandler.java

fixes an issue on cross-dim tp

* phase 1 of server side fixing

* phase 2 of server side fixing